1.初步完成基于shiro的认证权限控制 2.认证之后签发自包含的JWT